--- a/workout01/report/workout01-xihuan-zhang.Rmd
+++ b/workout01/report/workout01-xihuan-zhang.Rmd
@@ -70,7 +70,7 @@ desc(perc_made))
 
 #####2PT Effective Shooting % by Player:
 
-```{r }
+```{r}
 two_points <- filter(name_shottype, shot_type == "2PT Field Goal")
 arrange(
 summarise(group_by(two_points, name),
@@ -99,10 +99,10 @@ desc(perc_made))
 From the tables above, we can see that Klay Thompson did 640 two points shots which is the most among five players, and succeed in the percentage of 51.4%. For three points shots, Klay made the second most shots and had got the highest success rate. It’s obvious that Klay’s strategy is to make more shots. Comparing to his two points shot, he did better in three points shots. 
 ![Andre Iguodala](https://www.gannett-cdn.com/-mm-/7349fb2ec8fa6eae87731d37a08df41a4a952655/c=320-223-4187-2408/local/-/media/2018/05/31/USATODAY/USATODAY/636633217332508663-2018-05-30-Andre-Iguodala.jpg?width=3200&height=1680&fit=crop)     
 ![Andre Iguodala](/Users/zhangxihuan/Desktop/playerstats/Andre.png)
-Although Andre Iguodala made 210 two points shots which is the least among five players, he got the highest success rate, 63.8%. Andre also did the least three points shots with a success rate of 36%. Andre did much better in two points shots than three points shots. He focused on the quality rather than quantity.     
+Although Andre Iguodala made 210 two points shots which is the least among five players, he got the highest success rate, 63.8%. Andre also did the least three points shots with a success rate of 36%. Andre did much better in two points shots than three points shots. He focused on the quality more than quantity.     
 ![Kevin Durant](https://static01.nyt.com/images/2017/04/07/sports/07durant-web1/07durant-web1-articleLarge.jpg?quality=75&auto=webp&disable=upscale)   
 ![Kevin stats](/Users/zhangxihuan/Desktop/playerstats/Kevin.png)
-Kevin Durant got the second place in two points shots success rate and the third place in three points rate. Meanwhile, he attempted more two points shots than three points shots. It turns out that he tended to be a two points shots player.      
+Kevin Durant got the second place in two points shots success rate and the third place in three points rate. Meanwhile, he attempted more two points shots than three points shots. It turns out that he tended to be a two points shots player. However, both the three points and two points success rate of current season are less than the 2016-2017 season.      
 
 ![Stephen Curry](https://cdn.vox-cdn.com/thumbor/QnyGzZIeq92Mba_HwcQ87qUmBzU=/0x0:3915x2613/1200x800/filters:focal(1706x113:2332x739)/cdn.vox-cdn.com/uploads/chorus_image/image/59594853/usa_today_10816472.1525210208.jpg)   
 ![Stephen stats](/Users/zhangxihuan/Desktop/playerstats/stephen\ stats\ AM.png)
@@ -117,10 +117,8 @@ Draymond Green is also an excellent player. It seems that he got the lowest succ
 * Conclusion: The GSW has a similar statistic as the 2016-2017 season where they won the championship, so they are a strong candidate for the champion in the 2018-2019 season. Although they are facing a very tough fight, they are still able to improve the situation as long as the coach Kerr set a powerful strategy and all players do as well as usual. Plus, with Andrew Bogot’s return, the Warriors have an even higher possibility to win the championship. In the recent Warriors and Nuggets game, the Warriors created the record of 51-point first quarter and a 142-111 victory at the end. In general, the chances of the Warriors winning this season are great, but it also depends on the Warriors performance in the playoffs. The result gained from past data can only be an estimation or a prediction but can’t be a conclusion since the situation changes in every game. We can never jump to the conclusion before collecting all the data. Do you think the GSW could win the champion again? Who is the MVP in your mind? Let’s stay focus on the Warriors’ performance together! Good luck, Warriors!
 
 
-reference:   
+* references:   
 https://github.com/ucb-stat133/stat133-hws      
-https://en.wikipedia.org/wiki/2018%E2%80%9319_Golden_State_Warriors_season    
-https://en.wikipedia.org/wiki/History_of_the_Golden_State_Warriors#2014%E2%80%93present:_The_Steve_Kerr_era_(Championship_Era)      
 https://www.basketball-reference.com/teams/GSW/2019.html  https://www.basketball-reference.com/players/c/curryst01.html    
 https://www.basketball-reference.com/players/t/thompkl01.html    
 https://www.basketball-reference.com/players/i/iguodan01.html    
