--- a/workout01/report/workout01-xihuan-zhang.Rmd
+++ b/workout01/report/workout01-xihuan-zhang.Rmd
@@ -9,7 +9,7 @@ library(dplyr)
 ```
 
 ```{r out.width="80%", echo=FALSE, fig.align='center'}
-knitr::include_graphics("/Users/zhangxihuan/Desktop/workout01/images/gsw-shot-chart.png") 
+knitr::include_graphics("/Users/zhangxihuan/Desktop/workout01/images/gsw-shot-chart.png", auto_pdf = getOption("knitr.graphics.auto_pdf", FALSE) )
 ```
 
 5.1)Effective Shooting Percentage
