add workout01 folder

--- a/workout01/report/workout01-xihuan-zhang.Rmd
+++ b/workout01/report/workout01-xihuan-zhang.Rmd
@@ -9,8 +9,8 @@ library(dplyr)
 ```
 
 
-```{r out.width="80%", echo=FALSE, fig.align='center'}
-knitr::include_graphics('/Users/zhangxihuan/Desktop/workout01/images/gsw-shot-chart.png', auto_pdf = getOption('knitr.graphics.auto_pdf', FALSE) )
+```{r out.width="100%", echo=FALSE, fig.align='center'}
+knitr::include_graphics('../images/gsw-shot-chart.png')
 ```
 
 5.1)Effective Shooting Percentage
